--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "next-auth": "^5.0.0-beta.19",
+    "mongodb": "^6.7.0",
+    "mongoose": "^8.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
