--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,35 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.pnp.loader.mjs
 
-# testing
-/coverage
-
-# next.js
+# Build artifacts
+/build
 /.next/
 /out/
 
-# production
-/build
+# Genkit
+/.genkit/
 
-# misc
-.DS_Store
-*.pem
+# Static assets
+/public/static
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# vercel
-.vercel
-
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-.genkit/*
-.env*
+# Environment variables
+.env
+.env*.local
 
-# firebase
-firebase-debug.log
-firestore-debug.log
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# System files
+.DS_Store
